# ubiquitous-pancake

./: .gitmodules  LICENSE  README.md
CallCapturer/: settings.gradle.kts
CallCapturer/app/: build.gradle.kts
CallCapturer/app/src/androidTest/java/com/ubiquitous_pancake/callcapture/: ExampleInstrumentedTest.kt
CallCapturer/app/src/main/: AndroidManifest.xml
CallCapturer/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  tinycap-lib.cpp  tinymix-lib.cpp
CallCapturer/app/src/main/cpp/include/: tinycap-lib.h  tinymix-lib.h
CallCapturer/app/src/main/java/com/ubiquitous_pancake/callcapture/: CallRecordingService.kt  MainActivity.kt
CallCapturer/app/src/main/res/layout/: activity_main.xml
CallCapturer/app/src/main/res/values/: strings.xml  themes.xml
CallCapturer/app/src/main/res/values-night/: themes.xml
CallCapturer/app/src/test/java/com/ubiquitous_pancake/callcapture/: ExampleUnitTest.kt
CallCapturer/gradle/wrapper/: gradle-wrapper.properties
agent/: .gitignore  settings.gradle.kts
agent/app/: build.gradle.kts
agent/app/src/androidTest/java/com/example/ubiquitous_pancake/: ExampleInstrumentedTest.kt
agent/app/src/main/: AndroidManifest.xml
agent/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
agent/app/src/main/java/com/example/ubiquitous_pancake/: BootReceiver.kt  MainService.kt
agent/app/src/test/java/com/example/ubiquitous_pancake/: ExampleUnitTest.kt
agent/gradle/wrapper/: gradle-wrapper.properties
